--- a/OSELAS.BSP-EnergyMicro-Gecko/local_src/game-1.0/Makefile
+++ b/OSELAS.BSP-EnergyMicro-Gecko/local_src/game-1.0/Makefile
@@ -10,8 +10,12 @@ CFLAGS += -O2 -g -Wall #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
 CPPFLAGS +=
 LDFLAGS +=
 
+OBJECTS = DrawGraphic.o
 
 all: game
+
+game: ${OBJECTS}
+	${CC} ${CFLAGS} game.c ${OBJECTS}  -o game ${LDFLAGS}
 
 clean:
 	-rm -f game
